Generate Payroll: Fixed error messages from not showing up. Payroll Config: Added YTD start option & separated tax tables onto their own tab. Payroll Data: Refactored payroll_period.php (not finished) Payroll Entries: Stopped contributions from being editable after payroll has been posted.

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ ul
 .view_add  {
 	border-collapse:collapse;
 	/*border: 0px solid black;*/
+	white-space: nowrap;
 }
 .view_add  td  {
 	border: 1px solid black;
@@ -147,6 +148,24 @@ ul
 }
 .view_add  th  {
 	border-right: 0px solid black;
+	padding-right: 5px;
+	padding-left: 5px;
+	text-align: left;
+}
+
+.view_add_totals {
+	border-collapse:collapse;
+	border: 0px dashed black;
+	white-space: nowrap;
+}
+.view_add_totals  td  {
+	border-bottom: 1px solid black;
+	padding-right: 5px;
+	padding-left: 5px;
+}
+.view_add_totals  th  {
+	border-left: 1px solid black;
+	border-bottom: 1px solid black;
 	padding-right: 5px;
 	padding-left: 5px;
 	text-align: left;
